[package]
name = "adventofcode22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
camino = "1.1.1"
enum-iterator = "1.2.0"
enum_derive = "0.1.7"
id_tree = "1.8.0"
pathfinding = "4.0.0"
rust-crypto = "0.2.36"
sscanf = "0.4.0"
